# nemolite2d-rs

./: .gitignore  Cargo.toml  Config.toml  LICENCE  README.md
.cargo/: config
.github/workflows/: rust.yaml
src/: app_timers.rs  checksum.rs  fortran_array_2d.rs  grid_constants.rs  kernels.rs  lib.rs  main.rs  model_parameters.rs  simulation_variables.rs  timer.rs
