[package]
name = "nemolite2d-rs"
version = "0.1.0"
authors = ["Drew Silcock <drew.silcock@stfc.ac.uk>"]
edition = "2018"

[lib]
name = "nemolite2d_rs_lib"
path = "src/lib.rs"

[[bin]]
name = "nemolite2d-rs"
path = "src/main.rs"

[dependencies]
config = "0.9.3"
serde = "1.0.99"
serde_derive = "1.0.99"
